--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "description": "Unofficial system for PIRATE BORG on Foundry VTT.",
   "scripts": {
-    "lint": "eslint --fix --ext .js ./module",
+    "lint": "eslint --fix --ext .js ./module --format node_modules/eslint-plugin-i18n-json/formatter.js lang/*",
     "precommit": "npm run validate",
     "prepare": "husky install",
     "pretty": "prettier --write .",
@@ -18,9 +18,13 @@
   "devDependencies": {
     "@typhonjs-fvtt/eslint-config-foundry.js": "^0.8.0",
     "eslint": "^7.32.0",
+    "eslint-plugin-i18n-json": "^3.1.0",
     "husky": "^7.0.4",
     "npm-run-all": "^4.1.5",
     "prettier": "^2.6.2",
     "sass": "^1.49.0"
+  },
+  "dependencies": {
+    "i18n-unused": "^0.8.0"
   }
 }
