--- a/.eslintrc
+++ b/.eslintrc
@@ -21,14 +21,20 @@
     // TODO: decide if we want no-shadow. Will likely need to omit minified.
     //"no-shadow": ["error", { "builtinGlobals": true, "hoist": "all", "allow": ["event"] }]
     "prefer-const": 2,
-    "i18n-json/valid-message-syntax": [2, {
-      "syntax": "icu"
-    }],
+    "i18n-json/valid-message-syntax": [
+      2,
+      {
+        "syntax": "icu"
+      }
+    ],
     "i18n-json/valid-json": 2,
-    "i18n-json/sorted-keys": [2, {
-      "order": "asc",
-      "indentSpaces": 2
-    }],
+    "i18n-json/sorted-keys": [
+      2,
+      {
+        "order": "asc",
+        "indentSpaces": 2
+      }
+    ],
     "i18n-json/identical-keys": 0
   }
 }
