--- a/package.json
+++ b/package.json
@@ -4,6 +4,9 @@
   "description": "Unofficial system for PIRATE BORG on Foundry VTT.",
   "main": "./module/pirateborg.js",
   "scripts": {
+    "build:clean": "node ./utils/packs.mjs package clean",
+    "build:db": "node ./utils/packs.mjs package pack",
+    "build:json": "node ./utils/packs.mjs package unpack",
     "lint": "eslint --fix --ext .js ./module --format node_modules/eslint-plugin-i18n-json/formatter.js lang/*",
     "precommit": "npm run validate",
     "prepare": "husky install",
@@ -17,13 +20,17 @@
   "author": "maqloner",
   "license": "MIT",
   "devDependencies": {
+    "@foundryvtt/foundryvtt-cli": "^1.0.2",
     "@typhonjs-fvtt/eslint-config-foundry.js": "^0.8.0",
     "eslint": "^8.17.0",
     "eslint-plugin-i18n-json": "^3.1.0",
     "eslint-plugin-import": "^2.26.0",
+    "fancy-log": "^2.0.0",
     "husky": "^7.0.4",
     "npm-run-all": "^4.1.5",
+    "path": "^0.12.7",
     "prettier": "^2.7.1",
-    "sass": "^1.49.0"
+    "sass": "^1.49.0",
+    "yargs": "^17.7.2"
   }
 }
