--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -21,7 +21,7 @@ jobs:
           files: "system.json"
         env:
           version: ${{github.event.release.tag_name}}
-          manifest: https://github.com/${{github.repository}}/releases/latest/download/system.json
+          manifest: https://github.com/${{github.repository}}/releases/download/${{github.event.release.tag_name}}/system.json
           download: https://github.com/${{github.repository}}/releases/download/${{github.event.release.tag_name}}/system.zip
 
       # Create a zip file with all files required by the system to add to the release
