--- a/packs/_source/invokable-arcane-rituals/release-the-kraken.json
+++ b/packs/_source/invokable-arcane-rituals/release-the-kraken.json
@@ -2,7 +2,7 @@
   "_id": "LjAGl888s3KWBKar",
   "name": "Release the Kraken",
   "type": "invokable",
-  "img": "/modules/pirate-borg-premium/Icons/ritual-center.webp",
+  "img": "systems/pirateborg/icons/misc/arcane-ritual.png",
   "effects": [],
   "folder": null,
   "sort": 0,
