--- a/package.json
+++ b/package.json
@@ -1,15 +1,16 @@
 {
   "name": "pirateborg",
   "version": "1.0.0",
+  "type": "module",
   "description": "Official system for PIRATE BORG on Foundry VTT.",
   "main": "./module/pirateborg.js",
   "scripts": {
     "build:clean": "node ./utils/packs.mjs package clean",
     "build:db": "node ./utils/packs.mjs package pack",
     "build:json": "node ./utils/packs.mjs package unpack",
-    "lint": "eslint --fix --ext .js ./module --format node_modules/eslint-plugin-i18n-json/formatter.js lang/*",
+    "lint": "eslint --fix ./module lang/",
     "precommit": "npm run validate",
-    "prepare": "husky install",
+    "prepare": "husky",
     "pretty": "prettier --write .",
     "pretty-check": "prettier --check .",
     "sass": "sass ./scss:./css",
@@ -21,17 +22,19 @@
   "author": "maqloner",
   "license": "MIT",
   "devDependencies": {
-    "@foundryvtt/foundryvtt-cli": "^1.0.3",
+    "@eslint/compat": "^2.0.0",
+    "@eslint/js": "^9.39.1",
+    "@foundryvtt/foundryvtt-cli": "3.0.2",
     "@typhonjs-fvtt/eslint-config-foundry.js": "^0.8.0",
-    "eslint": "^8.17.0",
-    "eslint-plugin-i18n-json": "^3.1.0",
-    "eslint-plugin-import": "^2.26.0",
+    "eslint": "9.39.1",
+    "eslint-plugin-i18n-json": "4.0.1",
+    "eslint-plugin-import": "^2.32.0",
     "fancy-log": "^2.0.0",
-    "husky": "^7.0.4",
+    "globals": "^16.5.0",
+    "husky": "9.1.7",
     "npm-run-all": "^4.1.5",
-    "path": "^0.12.7",
-    "prettier": "^2.7.1",
-    "sass": "^1.49.0",
-    "yargs": "^17.7.2"
+    "prettier": "3.7.4",
+    "sass": "^1.96.0",
+    "yargs": "18.0.0"
   }
 }
