feat: add git worktree management utilities
- Worktree creation, switching, listing, and removal
- GitHub PR integration for checking out PRs as worktrees
- Foundry VTT status checking to prevent data corruption during switches

--- a/.env.example
+++ b/.env.example
@@ -11,4 +11,14 @@ FOUNDRY13_PATH="foundry13data/Data/systems/${SYSTEM_NAME}"
 FOUNDRY_HOST=${FOUNDRY13}
 FOUNDRY_INSTALL_PATH=${FOUNDRY13_PATH}
 
+FOUNDRY_API_STATUS_ENDPOINT="http://127.0.0.1:30000/api/status"
+
 GITHUB_TOKEN=ghp_XXX
+
+# Git Worktree Configuration
+# Base directory for worktrees (supports both relative and absolute paths)
+# Relative paths are resolved from the project root
+# Examples:
+#   Relative: "../" (default - worktrees are siblings to project)
+#   Absolute: "/Users/you/dev/worktrees"
+WORKTREE_BASE_DIR="../"
