--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,18 +11,20 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v4
 
       # Substitute the Manifest and Download URLs in the system.json
       - name: Substitute Manifest and Download Links For Versioned Ones
-        id: sub_manifest_link_version
-        uses: microsoft/variable-substitution@v1
-        with:
-          files: "system.json"
-        env:
-          version: ${{github.event.release.tag_name}}
-          manifest: https://github.com/${{github.repository}}/releases/download/${{github.event.release.tag_name}}/system.json
-          download: https://github.com/${{github.repository}}/releases/download/${{github.event.release.tag_name}}/system.zip
+        run: |
+          VERSION="${{ github.event.release.tag_name }}"
+          MANIFEST_URL="https://github.com/${{ github.repository }}/releases/download/${VERSION}/system.json"
+          DOWNLOAD_URL="https://github.com/${{ github.repository }}/releases/download/${VERSION}/system.zip"
+
+          jq --arg version "$VERSION" \
+             --arg manifest "$MANIFEST_URL" \
+             --arg download "$DOWNLOAD_URL" \
+             '.version = $version | .manifest = $manifest | .download = $download' \
+             system.json > system.json.tmp && mv system.json.tmp system.json
 
       # Create a zip file with all files required by the system to add to the release
       - run: zip -r ./system.zip CHANGELOG.md  LICENSE.MB3PL LICENSE.MIT how-to-use-this-system.md README.md system.json template.json css/ fonts/ icons/ lang/ module/ packs/ templates/ tokens/ ui/
